--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-This is some of the andvance javascript topics that are mosty used in react 
-i am makiing it simple with small examples 
+This is some of the advance javascript topics that are mosty used in react 
+i am making it simple with small examples 
